--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-es2015": "^6.13.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-connect": "^5.0.0",
     "gulp-uglify": "^2.0.0"
   }
 }
