--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 node_js:
-  - "4.50"
+  - "6"
+  - "6.1"
+  - "5.11"
+  - "0.6"
+  - "iojs"
 before_script:
   - npm install -g gulp
 script: gulp
